1.0.1
	[BUGFIX] No stdWrap from variables without equal sign "=".

1.0.0
	Initial upload.